# owl-path-tracer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Functions.ipynb  README.md  bsdf_functions.ipynb  config.json
assets/: car.json  colors.txt  cornell-box.json  cornell-box.obj.scene  cube.json  cube.obj.scene  dragon.json  mitsuba.json  settings.json  sphere.json
bachelorThesis/: CMakeLists.txt  bachelorThesis.cpp  bachelorThesis.h
experiments/: CMakeLists.txt
experiments/01_cmdline/: CMakeLists.txt  hostCode.cpp
experiments/01_cmdline/device/: tracer.cu  tracer.hpp
experiments/02_cmdline_advanced/: CMakeLists.txt
experiments/02_cmdline_advanced/device/: tracer.hpp
experiments/02_interactive/: CMakeLists.txt  hostCode.cpp
experiments/02_interactive/device/: tracer.cu  tracer.hpp
experiments/02_optix7course/: CMakeLists.txt
experiments/02_optix7course/oc01_helloOwl/: CMakeLists.txt  main.cpp
experiments/02_optix7course/oc02_pipelineAndRayGen/: CMakeLists.txt  LaunchParams.hpp  deviceCode.cu  main.cpp
experiments/03_advanced/: CMakeLists.txt
pathTracer/: CMakeLists.txt  Main.cpp  disney.hpp  settings.hpp
pathTracer/include/pathTracer/: OWLRenderer.hpp  ObjLoader.hpp  Renderer.hpp  StbUtils.hpp
pathTracer/include/pt/: ObjLoader.hpp  Renderer.hpp  StbUtils.hpp  Types.hpp
pathTracer/src/: Main.cpp  ObjLoader.cpp  Renderer.cpp  StbUtils.cpp  camera.cpp  camera.hpp  macros.hpp  math.hpp  owl.hpp  random.hpp  sample_methods.hpp  types.hpp
pathTracer/src/device/: BsdfUtil.hpp  Bxdf.hpp  ClosestHit.hpp  DeviceGlobals.hpp  Disney.hpp  Globals.hpp  Math.hpp  Miss.hpp  PathTracer.cu  PathTracer.hpp  Random.hpp  SampleMethods.hpp  Sampling.hpp  Shared.hpp  Types.hpp  bsdf_utils.hpp  camera.cpp  camera.hpp  device.cu  device.hpp  device_global.hpp  disney.hpp  materials.hpp  owl.hpp  path_tracer.hpp
pathTracer/src/device/core/: ClosestHit.hpp  Miss.hpp  PathTracer.hpp  core.hpp  deviceTypes.hpp
pathTracer/src/device/lights/: Light.hpp  LightUtils.hpp
pathTracer/src/device/materials/: BrdfUtils.hpp  Dielectric.hpp  Disney.hpp  DisneyBrdf.hpp  DisneyBrdfUtils.hpp  Lambert.hpp  Materials.hpp  Microfacet.hpp
pathTracer/src/device/utils/: macros.hpp  random.hpp  types.hpp
pathTracer/src/host/: ObjLoader.cpp  ObjLoader.hpp  Renderer.cpp  Renderer.hpp  StbUtils.cpp
pathTracer/src/shared/: macros.hpp  random.hpp  shared.hpp  types.hpp
pathTracer/src/utils/: image_buffer.cpp  image_buffer.hpp  math.cpp  math.hpp  mesh_loader.cpp  mesh_loader.hpp
path_tracer/: CMakeLists.txt  Main.cpp
path_tracer/src/: application.cpp  application.hpp  camera.cpp  macros.hpp  math.hpp  owl.hpp  random.hpp  sample_methods.hpp
path_tracer/src/device/: bsdf_utils.hpp  device.cu  device.hpp  device_global.hpp  lights.hpp  materials.hpp  path_tracer.hpp
path_tracer/src/device/disney/: disney.cuh  disney.cuh.bak  disney_clearcoat.cuh  disney_diffuse.cuh  disney_helper.cuh  disney_sheen.cuh  disney_specular.cuh
path_tracer/src/utils/: image_buffer.cpp  image_buffer.hpp  mesh_loader.cpp  mesh_loader.hpp  parser.cpp  parser.hpp
rayTracer/: CMakeLists.txt  Renderer.hpp  deviceCode.cu  hostCode.cpp  hostCode.hpp  objLoader.cpp  objLoader.hpp  utils.hpp
scenes/: cornell-box-w-boxes.json  cornell-box-w-boxes.obj.scene  dragon.json  mitsuba.json  suzanne.json  three-sphere-test.json
simpleLogger/: CMakeLists.txt  simpleLogger.hpp
thesis/: .gitignore  README.md  bachelor_thesis.bib  monte-carlo.md  thesis.tex
thesis/appendix/: algorithms.tex  disney-references.tex  source-code.tex
thesis/chapters/: algorithms.tex  analysis.tex  background.tex  chapter01.tex  conclusion.tex  implementation.tex  introduction.tex  literature-review.tex
thesis/preamble/: declaration-of-authorship.tex  eidesstattliche-erklaerung.tex  titlepage.tex
unit_tests/: CMakeLists.txt  path_tracer_test.cu
