# BASIC PROJECT SETTINGS
CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

PROJECT("path_tracer" VERSION 0.5.0 LANGUAGES CXX C CUDA)

# SET STANDARDS
IF (NOT DEFINED CMAKE_CUDA_STANDARD)
    SET(CMAKE_CUDA_STANDARD_REQUIRED ON)
    SET(CMAKE_CUDA_EXTENSIONS OFF)
    SET(CMAKE_CUDA_STANDARD 17)
ENDIF ()

IF (NOT DEFINED CMAKE_CXX_STANDARD)
    SET(CMAKE_CXX_STANDARD 20)
    SET(CMAKE_CXX_STANDARD_REQUIRED ON)
    SET(CMAKE_CXX_EXTENSIONS OFF)
ENDIF ()

IF (NOT DEFINED CMAKE_C_STANDARD)
    SET(CMAKE_C_STANDARD 17)
    SET(CMAKE_C_STANDARD_REQUIRED ON)
    SET(CMAKE_C_EXTENSIONS OFF)
ENDIF ()

# CONFIGURE EXTERNAL LIBRARIES
SET(OptiX_ROOT_DIR "C:/ProgramData/NVIDIA Corporation/OptiX SDK 7.4.0")

SET(OWL_BUILD_SAMPLES OFF CACHE BOOL "Build the Samples?")
ADD_SUBDIRECTORY("extern/owl" EXCLUDE_FROM_ALL)
ADD_SUBDIRECTORY("extern/tinyobjloader" EXCLUDE_FROM_ALL)
ADD_SUBDIRECTORY("extern/fmt" EXCLUDE_FROM_ALL)
INCLUDE_DIRECTORIES("extern/stb" EXCLUDE_FROM_ALL)

ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/pathTracer")
