# BASIC PROJECT SETTINGS
CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
CMAKE_POLICY(SET CMP0104 NEW)

PROJECT("path_tracer" VERSION 0.5.0 LANGUAGES C CXX CUDA)

# SET STANDARDS
IF (NOT DEFINED CMAKE_CUDA_STANDARD)
    SET(CMAKE_CUDA_STANDARD_REQUIRED ON)
    SET(CMAKE_CUDA_EXTENSIONS OFF)
    SET(CMAKE_CUDA_STANDARD 17)
ENDIF ()

IF (NOT DEFINED CMAKE_CXX_STANDARD)
    SET(CMAKE_CXX_STANDARD 20)
    SET(CMAKE_CXX_STANDARD_REQUIRED ON)
    SET(CMAKE_CXX_EXTENSIONS OFF)
ENDIF ()

IF (NOT DEFINED CMAKE_C_STANDARD)
    SET(CMAKE_C_STANDARD 17)
    SET(CMAKE_C_STANDARD_REQUIRED ON)
    SET(CMAKE_C_EXTENSIONS OFF)
ENDIF ()

IF (MSVC)
    # not receiving errors due to msvc safe functions
    ADD_COMPILE_DEFINITIONS(_CRT_SECURE_NO_WARNINGS=1)
ENDIF ()

# CONFIGURE EXTERNAL LIBRARIES
SET(OptiX_ROOT_DIR "C:/ProgramData/NVIDIA Corporation/OptiX SDK 7.4.0")

ADD_SUBDIRECTORY("extern/owl" EXCLUDE_FROM_ALL)
ADD_SUBDIRECTORY("extern/tinyobjloader" EXCLUDE_FROM_ALL)
ADD_SUBDIRECTORY("extern/fmt" EXCLUDE_FROM_ALL)
INCLUDE_DIRECTORIES("extern/stb" EXCLUDE_FROM_ALL)

ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/path_tracer")
